--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,2 @@
-# OpenAI API Configuration
-VITE_OPENAI_API_KEY=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
-
-# Optional: Custom API endpoint if using a proxy
-VITE_OPENAI_API_URL=https://api.openai.com/v1
+# Google Gemini AI API Configuration
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
