Implement authentication system with IP tracking and Supabase

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 # Google Gemini AI API Configuration
 VITE_GEMINI_API_KEY=AIzaSyCqoAOGAVZg0vyOvMrdo4b3LD7eO3jPUpQ
+
+# Supabase Configuration
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
